[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/new_icon.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Weapons/DiamondEagle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GUI/DebugInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/basic_light.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Dash.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Weapons/LifeMatterMinigun.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/GUI/Themes/health_bar.tres" type="Theme" id=8]
[ext_resource path="res://src/Actors/HealthBar.gd" type="Script" id=9]
[ext_resource path="res://assets/IMPACT.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://src/GUI/Targetting.tscn" type="PackedScene" id=11]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -24, -41, -7, -41, -7, -58, 13, -58, 13, -41, 27, -41, 27, 1, 4, 1, 4, 3, 1, 3, 1, 5, 4, 5, 4, 6, 7, 6, 7, 7, 7, 9, 6, 10, -1, 10, -1, 11, -3, 11, -3, 13, 0, 13, 0, 14, 1, 14, 1, 15, 34, 15, 36, 16, 38, 19, 39, 23, 38, 29, 34, 32, 8, 32, -31, 32, -35, 28, -36, 22, -34, 18, -31, 16, -3, 16, -3, 14, -4, 12, -4, 9, 1, 8, 6, 8, 6, 7, 3, 7, 2, 6, -2, 6, -3, 5, -3, 2, 0, 2, 0, 1, -24, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 2
font_data = ExtResource( 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerHitbox" type="CollisionPolygon2D" parent="."]
position = Vector2( 25, -5.00002 )
rotation = 3.14159
scale = Vector2( 63.6793, 3.3123 )
polygon = PoolVector2Array( 0.204147, 15.6991, 0.204147, 10.8686, 0, 10.8686, 0, -1.20763, 0.329778, -1.20763, 0.361185, -2.11334, 0.392592, -2.41525, 0.392592, -2.71715, 0.345481, -3.01906, 0.298369, -3.01906, 0.282666, -3.62286, 0.298369, -4.52858, 0.329778, -4.52858, 0.423999, -4.52858, 0.439703, -4.83048, 0.423999, -5.13239, 0.408296, -5.4343, 0.376888, -5.4343, 0.376888, -6.34001, -0.141334, -6.34001, -0.188444, -7.84954, -0.188444, -9.05716, -0.172741, -10.2648, -0.125629, -10.8686, 0.89511, -10.8686, 0.942221, -10.2648, 0.957924, -9.35906, 0.957924, -7.84954, 0.910813, -6.34001, 0.455407, -6.34001, 0.455407, -5.4343, 0.47111, -5.13239, 0.47111, -4.22668, 0.455407, -4.22668, 0.439703, -3.92477, 0.314074, -3.92477, 0.314074, -3.62286, 0.361185, -3.62286, 0.361185, -3.32096, 0.439703, -3.32096, 0.439703, -3.01906, 0.455407, -3.01906, 0.455407, -2.11334, 0.408296, -2.11334, 0.408296, -1.20763, 0.753777, -1.20763, 0.753777, 10.8686, 0.502518, 10.8686, 0.502518, 15.6991 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -1, 0 )
occluder = SubResource( 1 )

[node name="PlayerIcon" type="Sprite" parent="."]
position = Vector2( -0.100098, -8.59982 )
texture = ExtResource( 1 )

[node name="DebugInfo" parent="." instance=ExtResource( 4 )]

[node name="EyeLight1" type="Light2D" parent="."]
position = Vector2( -12, -26 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
color = Color( 0, 0.917647, 1, 1 )
shadow_enabled = true

[node name="EyeLight2" type="Light2D" parent="."]
position = Vector2( 15, -25 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
color = Color( 0, 0.917647, 1, 1 )
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Slot" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="Weapon1" type="Node2D" parent="Slot"]

[node name="Sprite" parent="Slot/Weapon1" instance=ExtResource( 7 )]
position = Vector2( 0, 3.8147e-06 )

[node name="Weapon2" type="Node2D" parent="Slot"]

[node name="DiamondEagle" parent="Slot/Weapon2" instance=ExtResource( 3 )]

[node name="Dash" parent="." instance=ExtResource( 6 )]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = -81.0
margin_right = 50.0
margin_bottom = -65.0
theme = ExtResource( 8 )
max_value = 1000.0
value = 1000.0
script = ExtResource( 9 )

[node name="ScoreBar" type="RichTextLabel" parent="."]
margin_left = 63.0
margin_top = -95.0
margin_right = 193.0
margin_bottom = -57.0
custom_colors/default_color = Color( 0.984314, 0.0117647, 0.615686, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "0
"
scroll_active = false

[node name="Targetting" parent="." instance=ExtResource( 11 )]
position = Vector2( 25, 0 )
